Adding note about shapes and points.

--- a/manim/03 - Mobjects.ipynb
+++ b/manim/03 - Mobjects.ipynb
@@ -9,12 +9,12 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.2</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.3</span>\n",
        "\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.2\u001b[0m\n",
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.3\u001b[0m\n",
        "\n"
       ]
      },
@@ -27,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4205e0fd",
    "metadata": {},
@@ -64,7 +63,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0dbbd7ea",
    "metadata": {},
@@ -112,7 +110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "304ee5e1",
    "metadata": {},
@@ -162,7 +159,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ac5c77ec",
    "metadata": {},
@@ -219,7 +215,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "923de7d5",
    "metadata": {},
@@ -279,7 +274,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d016aa2",
    "metadata": {},
@@ -325,7 +319,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5f1a3290",
    "metadata": {},
@@ -373,7 +366,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de8674a0",
    "metadata": {},
@@ -417,7 +409,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bce8d47a",
    "metadata": {},
@@ -458,7 +449,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a653ac8d",
    "metadata": {},
@@ -499,7 +489,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0ade68ec",
    "metadata": {},
@@ -541,7 +530,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9cf7939a",
    "metadata": {},
@@ -581,7 +569,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "efca293f",
    "metadata": {},
@@ -621,7 +608,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "af3e3d01",
    "metadata": {},
@@ -673,7 +659,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "79d4d3b2",
    "metadata": {},
@@ -713,7 +698,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c4e1e1d5",
    "metadata": {},
@@ -888,7 +872,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1b871335",
    "metadata": {},
@@ -935,7 +918,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "68522f7f",
    "metadata": {},
@@ -976,7 +958,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "53da71a1",
    "metadata": {},
@@ -1022,24 +1003,25 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b147f072",
    "metadata": {},
    "source": [
-    "## Groups\n"
+    "## Groups\n",
+    "\n",
+    "NOTE: In addition to moving objects as a unit, groups may have some rendering optimizations (according to a 3blue1brown video), even if the groups aren't added to the scene themselves but are just used to hold the objects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "id": "7415b7e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/Grouping@2023-03-24@17-45-04.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "<video src=\"media/jupyter/Grouping@2024-11-13@10-35-18.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -1061,12 +1043,15 @@
     "        group2 = VGroup(Square().shift(LEFT*4), Square().shift(LEFT*2))  # Group can be moved as a unit\n",
     "        group2.shift(UP*3)\n",
     "        \n",
+    "        group3 = Group(Dot())  # Non-vector objects can be in the more generic Group instead of VGroup\n",
+    "        \n",
     "        self.add(group2)\n",
+    "        self.add(group3)\n",
+    "        \n",
     "        self.wait()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a75b249e",
    "metadata": {},
@@ -1076,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "5a063f52",
    "metadata": {},
    "outputs": [
@@ -1095,9 +1080,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "982916d6",
+   "metadata": {},
+   "source": [
+    "## Conceptual Summary of Shapes and Points\n",
+    "\n",
+    " * shape is made up of `points` array\n",
+    " * a point is an array of coordinates\n",
+    " * points are not assumed connected by default\n",
+    "   * this is why there's often duplication, etc.\n",
+    "   * the exact interpretation of points depends on the shape class and its other internal objects\n",
+    " * shape-specific methods are used to add and find points with the proper interpretation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fbc1cb",
+   "id": "a467175a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1119,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
