Adding important links to study.

--- a/manim/01 - Setup and Execution.ipynb
+++ b/manim/01 - Setup and Execution.ipynb
@@ -415,9 +415,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b65d742e",
+   "metadata": {},
+   "source": [
+    "## File Organization\n",
+    "\n",
+    "You can have multiple scenes (classes) in a file and just render them as separate files from the shell."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "778cf4fe",
+   "id": "0924675b",
    "metadata": {},
    "outputs": [],
    "source": []
