--- a/manim/11 - Galleries and Examples.ipynb
+++ b/manim/11 - Galleries and Examples.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "https://docs.manim.community/en/stable/reference_index/animations.html - all the animation objects\n",
     "\n",
+    "https://docs.manim.community/en/stable/guides/deep_dive.html - internals deep dive\n",
+    "\n",
     "----\n",
     "\n",
     "https://github.com/3b1b/videos - 3blue1brown code for videos (uses his version of manim)\n",
@@ -16,6 +18,32 @@
     "https://github.com/3b1b/manim - his version of manim (used in his videos)\n",
     "\n",
     "https://3b1b.github.io/manim/getting_started/example_scenes.html#surfaceexample - 3blue1brown's example gallery\n",
+    "\n",
+    "----\n",
+    "\n",
+    "https://www.aquabeam.me/manim/opengl_guide/ - 3rd party OpenGL documentation\n",
+    "\n",
+    "https://github.com/ManimCommunity/manim/tree/main/manim/mobject/opengl - OpenGL objects in community edition (undocumented)\n",
+    "\n",
+    "----\n",
+    "\n",
+    "https://www.youtube.com/watch?v=3d6DsjIBzJ4 - Taylor Series video\n",
+    "\n",
+    "https://github.com/3b1b/videos/blame/master/_2017/eoc/chapter10.py - possibly the code for Taylor Series Video (though it says chapter 10 instead of 11)\n",
+    "\n",
+    "----\n",
+    "\n",
+    "https://www.youtube.com/watch?v=spUNpyF58BY - Fourier Transform video\n",
+    "\n",
+    "https://www.youtube.com/watch?v=r6sGWTCMz2k - Fourier Series video\n",
+    "\n",
+    "https://github.com/3b1b/videos/blob/master/_2018/fourier.py - Fourier video code\n",
+    "\n",
+    "----\n",
+    "\n",
+    "https://docs.manim.community/en/stable/reference/manim.animation.transform_matching_parts.TransformMatchingTex.html#transformmatchingtex - a key object for transforming equations\n",
+    "\n",
+    "https://docs.manim.community/en/stable/reference/manim.animation.transform_matching_parts.TransformMatchingShapes.html - another key transformation object\n",
     "\n",
     "----\n",
     "\n",
