Starting OpenGL notebook.

--- a/manim/11 - Galleries and Examples.ipynb
+++ b/manim/11 - Galleries and Examples.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "https://github.com/ManimCommunity/manim/tree/main/manim/mobject/opengl - OpenGL objects in community edition (undocumented)\n",
     "\n",
+    "https://github.com/ManimCommunity/manim/issues/3705 - to help try to get planetary spheres working\n",
+    "\n",
     "----\n",
     "\n",
     "https://www.youtube.com/watch?v=3d6DsjIBzJ4 - Taylor Series video\n",
