--- a/manim/01 - Setup and Execution.ipynb
+++ b/manim/01 - Setup and Execution.ipynb
@@ -30,26 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7456c5fb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.2</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.2\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You need this even for the cell magic (%%manim) to work.\n",
     "import manim"
@@ -308,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "50070a44",
    "metadata": {},
    "outputs": [
@@ -425,9 +409,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ce922f8",
+   "metadata": {},
+   "source": [
+    "## OpenGL\n",
+    "\n",
+    "It doesn't seem to be possible to run using OpenGL from inside a notebook, but it is possible from the terminal. No additional dependencies need to be installed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "549f751f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m18.1\u001b[0m\n",
+      "\n",
+      "\u001b[2;36m[11/17/24 23:08:25]\u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Animation \u001b[32m0\u001b[0m : Partial      \u001b]8;id=59698;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=515837;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py#527\u001b\\\u001b[2m527\u001b[0m\u001b]8;;\u001b\\\n",
+      "\u001b[2;36m                    \u001b[0m         movie file written in      \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m'/Users/davidpetrofsky/rep\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mos/snippets/manim/media/vi\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mdeos/example/480p15/partia\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32ml_movie_files/CreateCircle\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m/233493676_827565550_22313\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m2457.mp4'\u001b[0m                  \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Combining to Movie file.   \u001b]8;id=351832;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=972802;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py#617\u001b\\\u001b[2m617\u001b[0m\u001b]8;;\u001b\\\n",
+      "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m                            \u001b]8;id=326165;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=130299;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene_file_writer.py#737\u001b\\\u001b[2m737\u001b[0m\u001b]8;;\u001b\\\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[1;33mFile\u001b[0m ready at              \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m'/Users/davidpetrofsky/rep\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mos/snippets/manim/media/vi\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mdeos/example/480p15/Create\u001b[0m \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mCircle.mp4'\u001b[0m                \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m                                    \u001b[2m                        \u001b[0m\n",
+      "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m \u001b[1;33mRendered\u001b[0m CreateCircle                  \u001b]8;id=510418;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene.py\u001b\\\u001b[2mscene.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=584760;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene.py#247\u001b\\\u001b[2m247\u001b[0m\u001b]8;;\u001b\\\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[1;33mPlayed\u001b[0m \u001b[32m1\u001b[0m \u001b[1;33manimations\u001b[0m                    \u001b[2m            \u001b[0m\n",
+      "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Previewed \u001b[1;33mFile\u001b[0m at:                  \u001b]8;id=89010;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/utils/file_ops.py\u001b\\\u001b[2mfile_ops.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=174930;file:///Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages/manim/utils/file_ops.py#231\u001b\\\u001b[2m231\u001b[0m\u001b]8;;\u001b\\\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m'/Users/davidpetrofsky/repos/snippe\u001b[0m \u001b[2m               \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32mts/manim/media/videos/example/480p1\u001b[0m \u001b[2m               \u001b[0m\n",
+      "\u001b[2;36m                    \u001b[0m         \u001b[32m5/CreateCircle.mp4'\u001b[0m                 \u001b[2m               \u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!manim --renderer=opengl --write_to_movie -pql example.py CreateCircle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0924675b",
+   "id": "ba1ffc71",
    "metadata": {},
    "outputs": [],
    "source": []
