Adding more info from quick googling.

--- a/typescript/Electron.ipynb
+++ b/typescript/Electron.ipynb
@@ -100,6 +100,16 @@
     "\n",
     "## Scaffolding/Templates\n",
     "\n",
+    "???\n",
+    "\n",
+    "## Menus and IPC\n",
+    "\n",
+    "???\n",
+    "\n",
+    "In general, there are functions in the API to share context and events between the __main process__ and the __renderer__.  That is how you can build menus in the main process and trigger actions/updates in the web page.  The application code would then look for certain members on `window` which would not be there if it's running as a real web app.\n",
+    "\n",
+    "## Tabs\n",
+    "\n",
     "???"
    ]
   },
