Adding further study after backend interviews.

--- a/SQL/Basic Statements.ipynb
+++ b/SQL/Basic Statements.ipynb
@@ -3097,9 +3097,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b435617",
+   "metadata": {},
+   "source": [
+    "# Ordering of Result Rows\n",
+    "\n",
+    "The ordering of result rows is __not guaranteed__ unless you specify `ORDER BY`.  Even if a particular implementation seems to return results in insertion order or whatever, it could suddenly change if the engine finds it's optimial to do it some other way for some reason, unless you specify `ORDER BY`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e7c2893",
+   "id": "67f5bae2",
    "metadata": {},
    "outputs": [],
    "source": []
