--- a/SQL/Syntax.ipynb
+++ b/SQL/Syntax.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "62dad745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "%sql duckdb://"
@@ -287,10 +296,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "baed43de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"DECLARE\"\n",
+      "LINE 2: DECLARE @myVariable INT;\n",
+      "        ^\n",
+      "[SQL: -- Declare a variable\n",
+      "DECLARE @myVariable INT;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -325,7 +366,22 @@
     "\n",
     "-- Use variables in a SELECT statement\n",
     "SELECT @var1 AS Variable1, @var2 AS Variable2, @var3 AS Variable3;\n",
-    "-- Expected output: Variable1: 5, Variable2: SQL, Variable3: [current date and time]"
+    "-- Expected output: Variable1: 5, Variable2: SQL, Variable3: [current date and time]\n",
+    "                \n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(50),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10,2) NULL\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 5000.00),\n",
+    "       (2, 'Jane Smith', 25, NULL),\n",
+    "       (3, 'Mike Johnson', 35, 8000.00),\n",
+    "       (4, 'Sarah Williams', 40, NULL);\n",
+    "    \n",
+    "SELECT * FROM employees WHERE id = @var1 - 1;"
    ]
   },
   {
@@ -1638,9 +1694,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf2de935",
+   "metadata": {},
+   "source": [
+    "# Whitespace and Semicolons\n",
+    "\n",
+    "- Whitespace is ignored\n",
+    "- Line breaks are just another whitespace\n",
+    "- Only semicolons terminate statements\n",
+    "- If you issue a single standalone query without a semicolon, the engine will accept it since it knows where the end is\n",
+    "- If you have 2 statements and the first is missing a semicolon, you will get an error\n",
+    "- The example below shows a common way of breaking and indenting for readability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4e5ca3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>salary</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>John Doe</td>\n",
+       "            <td>30</td>\n",
+       "            <td>50000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>Jane Smith</td>\n",
+       "            <td>25</td>\n",
+       "            <td>60000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Mike Johnson</td>\n",
+       "            <td>35</td>\n",
+       "            <td>70000.00</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>John Smith</td>\n",
+       "            <td>25</td>\n",
+       "            <td>70000.00</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "+----+--------------+-----+----------+\n",
+       "| id |     name     | age |  salary  |\n",
+       "+----+--------------+-----+----------+\n",
+       "| 1  |   John Doe   |  30 | 50000.00 |\n",
+       "| 2  |  Jane Smith  |  25 | 60000.00 |\n",
+       "| 3  | Mike Johnson |  35 | 70000.00 |\n",
+       "| 4  |  John Smith  |  25 | 70000.00 |\n",
+       "+----+--------------+-----+----------+"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE employees (\n",
+    "    id INT PRIMARY KEY,\n",
+    "    name VARCHAR(100),\n",
+    "    age INT,\n",
+    "    salary DECIMAL(10, 2)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO employees (id, name, age, salary)\n",
+    "VALUES (1, 'John Doe', 30, 50000.00),\n",
+    "       (2, 'Jane Smith', 25, 60000.00),\n",
+    "       (3, 'Mike Johnson', 35, 70000.00),\n",
+    "       (4, 'John Smith', 25, 70000.00);\n",
+    "        \n",
+    "SELECT\n",
+    "    *\n",
+    "FROM\n",
+    "    employees\n",
+    "ORDER BY\n",
+    "    salary;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d3b07596",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"None\">Running query in &#x27;duckdb://&#x27;</span>"
+      ],
+      "text/plain": [
+       "Running query in 'duckdb://'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: If using snippets, you may pass the --with argument explicitly.\n",
+      "For more details please refer: https://jupysql.ploomber.io/en/latest/compose.html#with-argument\n",
+      "\n",
+      "\n",
+      "Original error message from DB driver:\n",
+      "(duckdb.ParserException) Parser Error: syntax error at or near \"SELECT\"\n",
+      "LINE 8: SELECT * FROM employees;\n",
+      "        ^\n",
+      "[SQL: SELECT\n",
+      "    *\n",
+      "FROM\n",
+      "    employees\n",
+      "ORDER BY\n",
+      "    salary -- no semicolon will confuse the engine\n",
+      "    \n",
+      "SELECT * FROM employees;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "\n",
+      "If you need help solving this issue, send us a message: https://ploomber.io/community\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT\n",
+    "    *\n",
+    "FROM\n",
+    "    employees\n",
+    "ORDER BY\n",
+    "    salary -- no semicolon will confuse the engine\n",
+    "    \n",
+    "SELECT * FROM employees;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9ceec4",
+   "id": "4950751e",
    "metadata": {},
    "outputs": [],
    "source": []
