Adding notes from studies after frontend interviews.

--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "d630feb9",
    "metadata": {},
    "outputs": [
@@ -119,9 +119,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3dc0061",
+   "metadata": {},
+   "source": [
+    "## Event Phases and Propagation\n",
+    "\n",
+    "__NOTE:__ Unfortunately, there's an issue with the Jupyter JS implementation that prevents the div and button events from firing, but this is how it should work.\n",
+    "\n",
+    "In general, the flow of events is as follows:\n",
+    "- __Capture Phase__ (\"event capturing\")\n",
+    "  - Events propagate from `window` down to `document` and down the DOM tree until the lowest level target\n",
+    "- __Bubble Phase__\n",
+    "  - Events propagate back from the lowest level target all the way up to `window` again\n",
+    "- __Target Phase__\n",
+    "  - This just means that on a given target in a given phase, handlers are called in the __order they were added__\n",
+    "  \n",
+    "As shown below, events are added to the __bubble phase by default__, but there's an optional 3rd boolean parameter to specify __capture phase__ instead.\n",
+    "\n",
+    "These methods of the `Event` object allow you to control the propagation when needed:\n",
+    "- `stopPropagation`\n",
+    "  - the event will fire on the remaining handlers on the current target in the current phase and then stop\n",
+    "  - eg. in capture phase, you can install a global handler to stop children from seeing clicks directly\n",
+    "- `stopImmediatePropagation`\n",
+    "  - like `stopPropagation` but also stops other handlers on the same level (after this one) from getting called"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "498badc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<body>\n",
+       "    <div>\n",
+       "        <button>\n",
+       "            Click Here\n",
+       "        </button>\n",
+       "    </div>\n",
+       "</body>\n",
+       "\n",
+       "<script>\n",
+       "    (() => {\n",
+       "        // You have to look at the actual JS console (not the notebook) to see these\n",
+       "        document.addEventListener('click', () => console.log('Document bubble 1'));\n",
+       "        document.addEventListener('click', () => console.log('Document bubble 2'));\n",
+       "        document.addEventListener('click', () => console.log('Document capture 1'), true);\n",
+       "        document.addEventListener('click', () => console.log('Document capture 2'), true);\n",
+       "        window.addEventListener('click', () => console.log('Window bubble'));\n",
+       "        \n",
+       "        document.querySelector('div').addEventListener('click', () => console.log('Div bubble'));\n",
+       "        document.querySelector('div').addEventListener('click', () => console.log('Div capture', true));\n",
+       "        \n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 1'));\n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1', true));\n",
+       "        \n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 2'));\n",
+       "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2', true));\n",
+       "    })();\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<body>\n",
+    "    <div>\n",
+    "        <button>\n",
+    "            Click Here\n",
+    "        </button>\n",
+    "    </div>\n",
+    "</body>\n",
+    "\n",
+    "<script>\n",
+    "    (() => {\n",
+    "        // You have to look at the actual JS console (not the notebook) to see these\n",
+    "        document.addEventListener('click', () => console.log('Document bubble 1'));\n",
+    "        document.addEventListener('click', () => console.log('Document bubble 2'));\n",
+    "        document.addEventListener('click', () => console.log('Document capture 1'), true);\n",
+    "        document.addEventListener('click', () => console.log('Document capture 2'), true);\n",
+    "        window.addEventListener('click', () => console.log('Window bubble'));\n",
+    "        \n",
+    "        document.querySelector('div').addEventListener('click', () => console.log('Div bubble'));\n",
+    "        document.querySelector('div').addEventListener('click', () => console.log('Div capture', true));\n",
+    "        \n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 1'));\n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 1', true));\n",
+    "        \n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button bubble 2'));\n",
+    "        document.querySelector('div button').addEventListener('click', () => console.log('Button capture 2', true));\n",
+    "        \n",
+    "        // Expected Output:\n",
+    "        /*\n",
+    "            Document capture 1\n",
+    "            Document capture 2\n",
+    "            Div capture\n",
+    "            Button capture 1\n",
+    "            Button capture 2\n",
+    "            Button bubble 1\n",
+    "            Button bubble 2\n",
+    "            Div bubble\n",
+    "            Document bubble 1\n",
+    "            Document bubble 2\n",
+    "            Window bubble\n",
+    "        */\n",
+    "    })();\n",
+    "</script>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "498badc8",
+   "id": "219da13d",
    "metadata": {},
    "outputs": [],
    "source": []
