--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -2276,9 +2276,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44f6b2b3",
+   "metadata": {},
+   "source": [
+    "# Types of Projects\n",
+    "\n",
+    "Angular tends to benefit large enterprise projects where clear separation of HTML, CSS, and code is more beneficial and a more batteries-included framework is needed.\n",
+    "\n",
+    "React tends to benefit smaller projects where quickly coding up a function to make a component is helpful and where all the stuff provided by Angular is not needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addd60bc",
+   "metadata": {},
+   "source": [
+    "# Angular Versions Since V9 (Ivy Refactor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "921ccbb4",
+   "metadata": {},
+   "source": [
+    "- 10-14 (up to Jun 2022) = more strictness options, deprecating old renderer, etc.\n",
+    "- 15 (Nov 2022) = standalone components, directives, pipes (reduced need for NgModules), directive composition\n",
+    "- 17 (Nov 2023) = standalone by default, new control flow syntax\n",
+    "- 18 (May 2024) = deferrable views, server-side improvements, zone experiments\n",
+    "- 19 (Nov 2024) = resources, signals, side effects"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a0293b1",
+   "id": "7f9c5155",
    "metadata": {},
    "outputs": [],
    "source": []
