--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -259,6 +259,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a971b2c",
+   "metadata": {},
+   "source": [
+    "# Promise.race()\n",
+    "\n",
+    "This one can't run in Jupyter due to the ES5 issue.\n",
+    "\n",
+    "`Promise.race()` takes an iterable of promises and returns (as a promise) the value (or error) of the first one that finishes, ignoring the rest.\n",
+    "\n",
+    "The ones that don't finish first still complete - you would have to use `AbortController` API to change that.\n",
+    "\n",
+    "To implement this behavior yourself, you can also make a new `Promise` and pass the `resolve` and `reject` to the subpromises you're waiting on with `.then()`. When one of them resolves or rejects, the whole thing will resolve or reject because you passed the top-level handler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "628b352b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 2, Character 13\n  const p = Promise.race([fetch('http://www.yahoo.com'), fetch('http://www.google.com')]);\n____________^\nTS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 2, Character 13",
+      "  const p = Promise.race([fetch('http://www.yahoo.com'), fetch('http://www.google.com')]);",
+      "____________^",
+      "TS2585: 'Promise' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const p = Promise.race([fetch('http://www.yahoo.com'), fetch('http://www.google.com')]);\n",
+    "  p.then(r => console.log(r));\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c24e69f",
    "metadata": {},
    "source": [
@@ -553,7 +604,7 @@
     "    fetch(url) -> gives you a promise with the data from the server\n",
     "      fetch(url).then((response) => {\n",
     "        if (response.ok) {\n",
-    "          console.log(response.json());\n",
+    "          console.log(await response.json());\n",
     "        }\n",
     "      }).catch((error) => console.log(error));\n",
     "    fetch(url, fields) -> same thing but can merge fields in\n",
@@ -563,7 +614,9 @@
     "    Chrome DevTools has a \"copy as fetch\" option so you can repeat an HTTP requests\n",
     "  \n",
     "  for gRPC, you need a special proxy that lets you fetch() from a JS client in a browser\n",
-    "```"
+    "```\n",
+    "\n",
+    "Methods like `response.json()` and `response.text()` are promises because HTTP is a __streaming protocol__ and the data could come back in chunks after the response code is already known."
    ]
   },
   {
@@ -728,6 +781,7 @@
     "          // although modern browsers SHOULD be able to figure this out\n",
     "            // if they don't, it would be a memory leak\n",
     "```\n",
+    "NOTE: see `JavaScript` snippets for info about __event capturing__ and phases.\n",
     "```\n",
     "    Adding DOM Elements\n",
     "```\n",
