Adding Angular Renaissance notes.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -2308,9 +2308,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09de3e2c",
+   "metadata": {},
+   "source": [
+    "# Angular Renaissance\n",
+    "\n",
+    "## Summary\n",
+    "This is a name used for user-friendly changes made starting with version 14 (June 2022) and continuing until today. The focus on Ivy in the past meant a lot of catch-up features (relative to React and other frameworks) were shelved for a long time.  Thus, once Ivy was finally shipped and stabilized, the renaissance began.\n",
+    "\n",
+    "For my purposes, the renaissance is conveniently just everything that happend to Angular since I stopped using Angular TypeScript at Google.\n",
+    "\n",
+    "## Standalone APIs\n",
+    "\n",
+    "In the past (and in my whole Google career), you had to declare components, directives, pipes, and services in modules (though you could say `provideIn: 'root'` for a service to not have to put them in there). This seemed natural at the time, but when you look at other frameworks, it's kind of just leaking implementation details and causing a lot of boilerplate. Now you only need to import the file containing a component, directive, or pipe in order to be able to use it in the template.\n",
+    "\n",
+    "At first, you had to say `standalone: true` in the component metadata, but that is __now the default__ (as of 19).  Version 18 made them standalone by default on creation by the CLI, but it still had to use that flag to make it happen.\n",
+    "\n",
+    "For the most part, you don't need modules anymore, unless you need one at the root for some dependencies that aren't using standalone yet.\n",
+    "\n",
+    "Presumably, this is accomplished by the component/directive/pipe decorator hooking into the rendering engine's interpretation of elements, just like React does."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb93e4b4",
+   "metadata": {},
+   "source": [
+    "## Directive Composition API\n",
+    "\n",
+    "A new `hostDirectives` property in component and directive metadata allows you to __mix in multiple directives__ in 1 component or directive.\n",
+    "\n",
+    "This makes it easier to reuse code in a more straightforward way.  Note that it is composition, not inheritance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a02a9761",
+   "metadata": {},
+   "source": [
+    "## Experiments\n",
+    "\n",
+    "They are experimenting with doing change detection __without zones__ and would like to __eventually get rid of change detection__ by using signals.\n",
+    "\n",
+    "They are also experimenting with using __Jest__ for testing like React does.\n",
+    "\n",
+    "They are also playing around with __server-side rendering improvements__ including partial hydration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750e0b73",
+   "metadata": {},
+   "source": [
+    "## Control Flow Syntax\n",
+    "\n",
+    "A new syntax using `@` in templates can replace the __structural directives__ (eg. `*ngIf`) and make the template more React-like (kind of).\n",
+    "\n",
+    "eg. `@if (a > b) {<div>a</div>} @else {<div>b</div>}` instead of putting `*ngIf` on each div and making it look like they're both there.\n",
+    "\n",
+    "Similarly. there are now `@for` and `@switch`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "536f5a47",
+   "metadata": {},
+   "source": [
+    "## Signals\n",
+    "\n",
+    "These are very new (v19 according to the chart I saw, but I feel like from blogs online it's a bit older actually). It's kind of a potential future replacement (at least in some state management circumstances) for observables.\n",
+    "\n",
+    "Main Ideas:\n",
+    "- a signal is a __wrapper__ for a piece of state (a variable)\n",
+    "- a signal can be __read-only__ or __writeable__\n",
+    "- signals can be composed via __computed signals__\n",
+    "- simply reading a signal in your template makes that signal a dependency of your template in terms of __change detection__ (if using `OnPush`)\n",
+    "  - no need to make an `Input()` for it like with observables\n",
+    "  - this is a lot like React's `useContext` except everyone can write it if it's writable\n",
+    "  \n",
+    "Using:\n",
+    "- `const count = signal(0);` makes a signal with an initial value\n",
+    "- `count()` gets the signal's current value in a template\n",
+    "- `count.set(3)` changes the signal's current value (and marks any component reading it as changed)\n",
+    "- `count.update(v => v + 1)` changes the value based on the old value\n",
+    "- `const comp = computed(() => count() * 2);` defines a read-only signal based on other signal(s)\n",
+    "  - modifying the dependencies will trigger updates to anyone using the computed signal\n",
+    "  - computed signals are __lazy__ and also __memoized__\n",
+    "  - dependencies are tracked by the most recent execution (calls internally mark dependencies)\n",
+    "  \n",
+    "NOTE: there are methods for __interop with RxJS__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa3ecc7",
+   "metadata": {},
+   "source": [
+    "## Effects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b49df1a",
+   "metadata": {},
+   "source": [
+    "These go along with signals and are similar to `useEffect` from React, and also like subscribing to an observable and doing some side effects.\n",
+    "\n",
+    "`effect(() => console.log(count())` will run the first time and then have the `count` __signal marked as a dependency__.  When that signal changes, the effect will __run again__.\n",
+    "\n",
+    "Effects are scoped to the lifetime of their surrounding context.  There is a mechanism for cleanup functions just like in React."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9627e699",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "\n",
+    "Resources are a way to incorporate __async operations__ (eg. `fetch`) into code that uses __signals__.\n",
+    "\n",
+    "It's a little bit like using `SWR` with input signals that can trigger new requests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24b47ec7",
+   "metadata": {},
+   "source": [
+    "## Deferrable Views\n",
+    "\n",
+    "This is a lot like `Suspsense` in React.\n",
+    "\n",
+    "You can wrap part of your template in `@defer {}` to make it not load right away.  By default, the browser will load it when idle, but you can specify other __triggers__ too.\n",
+    "\n",
+    "You can also add `@placeholder {}` and `@loading {}` blocks after the `@defer` to show something else while not loaded and while loading."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9c5155",
+   "id": "969042f9",
    "metadata": {},
    "outputs": [],
    "source": []
