Adding some clarifications.

--- a/javascript/DOM Manipulation.ipynb
+++ b/javascript/DOM Manipulation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6b3367bc",
+   "metadata": {},
+   "source": [
+    "## Very Basics\n",
+    "\n",
+    "There are much more extensive notes on DOM manipulation in my TypeScript Standard Libarary snippets [here](https://github.com/davidpet/snippets/blob/main/typescript/Standard%20Library.ipynb)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d630feb9",
@@ -125,7 +135,7 @@
    "source": [
     "## Event Phases and Propagation\n",
     "\n",
-    "__NOTE:__ Unfortunately, there's an issue with the Jupyter JS implementation that prevents the div and button events from firing, but this is how it should work.\n",
+    "__NOTE:__ Unfortunately, there's an issue with the Jupyter JS implementation that prevents the div and button events from firing, but I tested it in a normal web page.\n",
     "\n",
     "In general, the flow of events is as follows:\n",
     "- __Capture Phase__ (\"event capturing\")\n",
@@ -203,7 +213,7 @@
     "</body>\n",
     "\n",
     "<script>\n",
-    "    (() => {\n",
+    "    (() => { // calling as lambda due to how jupyter handles rerunning cells\n",
     "        // You have to look at the actual JS console (not the notebook) to see these\n",
     "        document.addEventListener('click', () => console.log('Document bubble 1'));\n",
     "        document.addEventListener('click', () => console.log('Document bubble 2'));\n",
